<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.perculacreative.peter.petersappportfolio.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/header"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorButton" />

            <Button
                android:id="@+id/moviesButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movies"
                android:theme="@style/Button" />

            <Button
                android:id="@+id/stockButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:theme="@style/Button" />

            <Button
                android:id="@+id/buildBiggerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buildbigger"
                android:theme="@style/Button" />

            <Button
                android:id="@+id/materialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material"
                android:theme="@style/Button" />

            <Button
                android:id="@+id/ubiquitousButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ubiquitous"
                android:theme="@style/Button" />

            <Button
                android:id="@+id/capstoneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:theme="@style/Button" />
        </LinearLayout>
    </ScrollView>